Introduce new create calendar event apis
